src/test/deca/context/invalid/SansObjet/DeclVar-EQ-float-float-string.deca
// Description:
//    Declaration of a float variable using == operation between a float variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    string y = "World"; 
    float z = x == y ; 
}
